# AI-agents-for-SupplyChain-Crewai

./: .gitignore  README.md  crew.txt  crewai_flow.html  email.txt  output.txt  pyproject.toml  route.txt  supplier.txt
src/supply_chain_optimization/: app.py  crew.txt  email.txt  main.py  output.txt  route.md  route.txt  supplier.txt
src/supply_chain_optimization/crews/email_generator_crew/: email_generator_crew.py
src/supply_chain_optimization/crews/email_generator_crew/config/: agents.yaml  tasks.yaml
src/supply_chain_optimization/crews/fetch_graphdb_crew/: fetch_graphdb_crew.py
src/supply_chain_optimization/crews/fetch_graphdb_crew/config/: agents.yaml  tasks.yaml
src/supply_chain_optimization/crews/find_best_route_crew/: find_best_route_crew.py
src/supply_chain_optimization/crews/find_best_route_crew/config/: agents.yaml  tasks.yaml
src/supply_chain_optimization/crews/find_supplier_crew/: find_supplier_crew.py
src/supply_chain_optimization/crews/find_supplier_crew/config/: agents.yaml  tasks.yaml
src/supply_chain_optimization/crews/inventory_monitoring_crew/: inventory_monitoring_crew.py
src/supply_chain_optimization/crews/inventory_monitoring_crew/config/: agents.yaml  tasks.yaml
src/supply_chain_optimization/crews/report_writer_crew/: report_writer_crew.py
src/supply_chain_optimization/crews/report_writer_crew/config/: agents.yaml  tasks.yaml
src/supply_chain_optimization/tools/: custom_tool.py
tests/: supply_chain_tests.py
